k8s/namespace.yaml
# hoobank-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hoobank
