k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoobank-ingress
  namespace: hoobank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hoobank.clone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoobank-service
                port:
                  number: 80
